--- a/Rcode/diagnostics.Rmd
+++ b/Rcode/diagnostics.Rmd
@@ -19,8 +19,8 @@ library(future)
 directory <- here::here("model","2025_base_model")
 base_model_name <- "updated_alldata_tunecomps_fitbias_ctl_tunecomps_start_20250424"
 
+# Identify the exe location so that the model settings can grab it for running the profiles.
 get_ss3_exe(dir = here::here("model", "2025_base_model"))
-
 exe_loc <- here::here(directory, 'ss3.exe')
 ```
 
