--- a/Rcode/diagnostics.Rmd
+++ b/Rcode/diagnostics.Rmd
@@ -33,10 +33,10 @@ exe_loc <- here::here(directory, 'ss3.exe')
 
 profile_info <- get_settings_profile(
   parameters =  c("NatM_break_1_Fem_GP_1", "SR_BH_steep", "SR_LN(R0)"),
-  low =  c(0.4, 0.25, -2),
-  high = c(0.4, 1.0, 2),
-  step_size = c(0.005, 0.05, 0.25),
-  param_space = c('multiplier', 'real', 'relative')
+  low =  c(0.4, 0.25, 4.5),
+  high = c(0.4, 1.0, 6),
+  step_size = c(0.005, 0.05, 0.15),
+  param_space = c('multiplier', 'real', 'real')
   )
 
 
@@ -115,7 +115,7 @@ model_settings <- get_settings(
     
     # Retrospective Settings
     newsubdir = "retro",
-    retro_yrs = -1:-10,
+    retro_yrs = -1:-5,
     
     # Plot target lines
     btarg = NULL,
