--- a/report/09_figures.qmd
+++ b/report/09_figures.qmd
@@ -6,3 +6,20 @@ Example:
 ![Figure caption \label{fig:tag_name}](file.png){alt="alt text"} 
 
 -->
+
+<!-- method 1 to add in figures -->
+![Figure of comparisons for Biomass ratio. \label{fig:Bratio}](plots_for_report/compare3_Bratio.png){alt="This is good alternative text"} 
+<!-- method 2 to add in figures -->
+![Figures of comparisons of SB uncertainty.](plots_for_report/compare2_spawnbio_uncertainty.png){#fig-sberr}
+
+```{r}
+#| label: fig-sbratio
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "Here is my great caption"
+
+knitr::include_graphics(
+    "plots_for_report/compare1_spawnbio.png"
+)
+```
