--- a/report/support_files/in-header.tex
+++ b/report/support_files/in-header.tex
@@ -30,6 +30,7 @@
 \usepackage[headsepline=0.005pt:,footsepline=0.005pt:,plainfootsepline,automark]{scrlayer-scrpage}
 \clearpairofpagestyles
 \ohead[]{\headmark} \cofoot[\pagemark]{\pagemark}
+\lohead{Yellowtail rockfish assessment 2025}
 \ModifyLayer[addvoffset=-.6ex]{scrheadings.foot.above.line}
 \ModifyLayer[addvoffset=-.6ex]{plain.scrheadings.foot.above.line}
 \setkomafont{pageheadfoot}{\small}
