Notes for update assessments

--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -30,6 +30,8 @@ Checking to see if this works \gls{s-tri}
 
 ## Decision table{-}
 
+ADW - decision tables not needed until after review
+
 ## Scientific uncertainty{-}
 
 ## Research and data needs{-}
