--- a/report/02_introduction.qmd
+++ b/report/02_introduction.qmd
@@ -2,6 +2,8 @@
 
 <!-- Scientific name, distribution, the basis for the choice of stock structure, including regional differences in life history or other biological characteristics that should form the basis of management units.  -->
 
+Map of scope of assessment - not needed for update
+
 ## Life History
 
 Refer to the most recent full assessment for additional information.
