--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -2229,3 +2229,26 @@ pages = {315--324},
   journal-URL =  "https://www.int-res.com/journals/meps/meps-home/",
 }
 
+@book{love_rockfishes_2002,
+	address = {Berkeley},
+	edition = {1st Edition},
+	title = {The {Rockfishes} of the {Northeast} {Pacific}},
+	isbn = {978-0-520-23438-3},
+	abstract = {From sleek shortbelly rockfish that resemble mackerels to heavy-bodied cowcod, the rockfishes display a bewildering array of shapes, sizes, and colors. This book is the most comprehensive ever written on this marvelously diverse group of fishes. The first part gives an overview of rockfish systematics, biology, ecology, and fisheries. The second part contains a key to identifying each species followed by detailed species accounts including information on appearance, life history, and fishery status. The book is copiously illustrated and written with humor as well as expertise.},
+	language = {English},
+	publisher = {University of California Press},
+	author = {Love, M.S. and Yoklavich, M. and Thorsteinson, L.},
+	month = sep,
+	year = {2002},
+}
+
+@techreport{hart_pacific_1973,
+author = "J.L. Hart",
+year = 1973,
+title = "Pacific Fishes of {C}anada",
+institution = "Fisheries Research Board of Canada Bulletin",
+number = 180,
+address = "St. Andrews, NB, Canada",
+pages = "740~p",
+}
+
