--- a/report/02_introduction.qmd
+++ b/report/02_introduction.qmd
@@ -1,8 +1,8 @@
 # Introduction
 
-Yelloweye rockfish (**Sebastes ruberrimus**) are found from the Gulf of Alaska to northern Baja California in Mexico across the northeastern Pacific Ocean (@hart_pacific_1973, @love_rockfishes_2002). Their core distribution is from southeast Alaska to central California on the west coast of the United States (@love_rockfishes_2002). Yelloweye rockfish in Puget Sound are considered isolated from the coastal waters population (Stewart et al. 2009) and have been listed as threatened under the Endangered Species Act since 2010 (Drake et al. 2010). 
+Yelloweye Rockfish (**Sebastes ruberrimus**) are found from the Gulf of Alaska to northern Baja California in Mexico across the northeastern Pacific Ocean (@hart_pacific_1973, @love_rockfishes_2002). Their core distribution is from southeast Alaska to central California on the west coast of the United States (@love_rockfishes_2002). Yelloweye Rockfish in Puget Sound are considered isolated from the coastal waters population (Stewart et al. 2009) and have been listed as threatened under the Endangered Species Act since 2010 (Drake et al. 2010). 
 
-Yelloweye rockfish are strongly assocaited with rocky bottom habtiat, particularly areas of high relief (@love_rockfishes_2002)
+Yelloweye Rockfish are strongly assocaited with rocky bottom habtiat, particularly areas of high relief (@love_rockfishes_2002), and are widely considered to be sedentary after settlement (Coombs 1979, DeMott 1983). However, new tagging studies suggest that Yelloweye Rockfish exhibit larger scale movement patterns more commonly than preivously considered (Hannah and Rankin 2011, Rasmusson et al. 2025). 
 
 <!-- Scientific name, distribution, the basis for the choice of stock structure, including regional differences in life history or other biological characteristics that should form the basis of management units.  -->
 
