Still working on intro
Added some ref's too, more text in intro

--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -2252,3 +2252,55 @@ address = "St. Andrews, NB, Canada",
 pages = "740~p",
 }
 
+@techreport{stewart_status_2009,
+  address = {7700 Ambassador Place NE, Suite 200, Portland, OR},
+  title = {Status of the {U}.{S}. yelloweye rockifsh resource in 2009},
+  institution = {Pacific Fishery Management Council},
+  author = {Stewart, I. J.,J. R. Wallace, and C. McGilliard}
+  year = {2009},
+  pages = {435}
+}
+
+@techreport{drake_status_2010,
+  type = {NOAA Technical Memorandum},
+  title = {Status review of five rockfish species in Puget Sound, Washington: bocaccio (Sebastes paucispinis), canary rockfish (S. pinniger), yelloweye rockfish (S. ruberrimus), greenstriped rockfish (S. elongatus), and redstripe rockfish (S. proriger)},
+  language = {en},
+  number = {NMFS-NWFSC-108},
+  author = {Drake J.S., E.A. Berntson, J.M. Cope, R.G. Gustafson, E.E. Holmes, P.S. Levin, N. Tolimieri, R.S. Waples, S.M. Sogard, and G.D. Williams},
+  year = {2010},
+  pages = {234},
+}
+
+@mastersthesis{coombs_1979,
+  title = {Reef fishes near Dipoe Bay, Oregon: movement and the recreational fishery},
+  school = {Oregon State University},
+  author = {Coombs, C.I.},
+  year = {1979}
+}
+
+@mastersthesis{demott_1983,
+  title = {Movement of tagged lingcod and rockfishes off Depoe Bay, Oregon},
+  school = {Oregon State University},
+  author = {DeMott, G. E.},
+  year = {1983}
+}
+
+@article{hannah_movement_2011,
+  title = {Site fidelity and movement of eight species of Pacific rockfish at a high-relief rocky reef on the Oregon coast},
+  volume = {31},
+  doi = {10.1080/02755947.2011.591239},
+  journal = {North American Journal of Fisheries Management},
+  author = {Hannah, R. W. and P. S. Rankin},
+  year = {2011},
+  pages = {483-494}
+}
+
+@article{rasmuson_movement_2025,
+  title = {Routine large-scale movements of the yelloweye rockfish (Sebastes ruberrimus)},
+  volume = {12},
+  doi = {10.3389/fmars.2025.1539206},
+  journal = {Frontiers in Marine Science},
+  author = {Rasmuson LK, Blume MTO, Lawrence KA, Laughlin BM, Edwards CA, Terwilliger MR, Ayrea AC, McInturf AG, Legare BJ and Chapple TK},
+  year = {2025}
+}
+
