--- a/report/02_introduction.qmd
+++ b/report/02_introduction.qmd
@@ -1,8 +1,10 @@
 # Introduction
 
-Yelloweye Rockfish (**Sebastes ruberrimus**) are found from the Gulf of Alaska to northern Baja California in Mexico across the northeastern Pacific Ocean (@hart_pacific_1973, @love_rockfishes_2002). Their core distribution is from southeast Alaska to central California on the west coast of the United States (@love_rockfishes_2002). Yelloweye Rockfish in Puget Sound are considered isolated from the coastal waters population (Stewart et al. 2009) and have been listed as threatened under the Endangered Species Act since 2010 (Drake et al. 2010). 
+Yelloweye Rockfish (**Sebastes ruberrimus**) are found from the Gulf of Alaska to northern Baja California in Mexico across the northeastern Pacific Ocean (@hart_pacific_1973, @love_rockfishes_2002). Their core distribution is from southeast Alaska to central California on the west coast of the United States (@love_rockfishes_2002). Yelloweye Rockfish in Puget Sound are considered isolated from the coastal waters population (@stewart_status_2009) and have been listed as threatened under the Endangered Species Act since 2010 (@drake_status_2010). 
 
-Yelloweye Rockfish are strongly assocaited with rocky bottom habtiat, particularly areas of high relief (@love_rockfishes_2002), and are widely considered to be sedentary after settlement (Coombs 1979, DeMott 1983). However, new tagging studies suggest that Yelloweye Rockfish exhibit larger scale movement patterns more commonly than preivously considered (Hannah and Rankin 2011, Rasmusson et al. 2025). 
+Yelloweye Rockfish are strongly associated with rocky bottom habtiat, particularly areas of high relief (@love_rockfishes_2002), and adults are considered to be solitary and sedentary after settlement (@coombs_1979, @demott_1983). However, new tagging studies suggest that adult Yelloweye Rockfish exhibit larger scale movement patterns more commonly than preivously considered (@hannah_movement_2011,@rasmuson_movement_2025). 
+
+There has been little advancement on information pertaining to the stock structure of Yelloweye Rockfish since the previous benchmark assessment. As noted in @gertseva_stock_2017, there is evidence of genetic diferences between Canadian waters (Strait of Georgia) and West coast coastal populations of Yelloweye Rockfish but no evidence across coastal populations (Siegle et al. 2013). Geo et al (2010) found that there was complete mixing of offspring from Oregon and Washington waters using otolith isotope analyses, indicating a single spawning stock in this portion of the Yelloweye Rockfish stock. Given the general perception of the sedentary nature of Yelloweye Rockfish adults and the moderate amount of mixing that occurs during the pelagic larval stage, the previous Yelloweye Rockfish assessment modeled the West coast population as a two-area assessment (California and a combined Oregon-Washington) with a common recruitment relationship (@gertseva_stock_2017). This update assessment maintains this basic structure.  
 
 <!-- Scientific name, distribution, the basis for the choice of stock structure, including regional differences in life history or other biological characteristics that should form the basis of management units.  -->
 
@@ -25,6 +27,10 @@ This section is not required for an update assessment; please refer to the most 
 This section is not required for an update assessment; please refer to the most recent full assessment (@gertseva_stock_2017) for additional information.
 
 ## Management performance
+
+Yelloweye Rockfish removals have been substantially reduced since its designation as overfished in 2002 through a variety of managment measures that eliminated retention in recreational fisheries, limited commercial retention, created broad spatial closures and implemented new gear restrictions that reduced trawling in rocky habitats. Many of these restrictions remain in effect, though as Yelloweye Rockfish stock has begun to rebuild, some managment measures have been modified or removed. These include some additional allocations to recreational fisheries that remain constrained by Yelloweye Rockfish estimated discard mortality and the removal of some Yelloweye Rockfish conservation areas for the non-trawl sector. 
+
+Recent trends in total catch relative to managment guidelines is available in (Table \ref{tbl-yelloweye_management}) and shows that total catch of Yelloweye Rockfish has remained below both the OFLs and ACLs. 
 
 <!-- Management performance, including a table or tables comparing Overfishing Limit (OFL), Acceptable Biological Catch (ABC), Annual Catch Limit (ACL), landings, and catch (i.e., landings plus discard) for each area and year. Groundfish assessments that estimate dead discarded catch must include a disclaimer noting that total mortality estimates from the WCGOP and from the stock assessment may differ due to the use of different methods. Investigation into how these methods differ is beyond the scope of a benchmark assessment. The rationale for modeling discard mortality can also be provided. This should be included in all update assessments.  -->
 
