--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -97,6 +97,9 @@ if (file.exists(here::here("report/tables"))) {
 } else {
   eval_tables <- FALSE
 }
+
+
+yelloweye_management <- read.csv(here::here("report", "tables", "yelloweye_management.csv"))
 ```
 
 
@@ -290,7 +293,7 @@ reference_points_table |>
 #| tbl-cap: "Recent trend in the overfishing limits (OFL), the acceptable biological catches (ABCs), the annual catch limits (ACLs), and the total dead catch (landings + discards) all in metric tons (mt)."
 #| tbl-pos: H
 
-recent_management_table |>
+yelloweye_management |>
   rename(`Total dead catch (mt)` = `Catch (mt)`) |>
   gt::gt() |>
   gt::tab_options(
