--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -2304,3 +2304,19 @@ pages = "740~p",
   year = {2025}
 }
 
+@article{siegle_genetics_2013,
+  title = {Subtle population genetic structure in yelloweye rockfish (Sebastes ruberrimus) is consistent with a major oceanographic division in British Columbia, Canada},
+  volume = {8},
+  doi = {p.e71083},
+  journal = {PloS One},
+  author = {Siegle, M.R., Taylor, E.B., Miller, K.M., Withler, R.E. and Yamanaka, K.L.},
+  year = {2013}
+}
+
+@article{gao_isotope_2010,
+  title = {Isotopic Correlation (δ18O versus δ13C) of Otoliths in Identification of Groundfish Stocks},
+  volume = {139},
+  journal = {Transactions of the American Fisheries Society},
+  author = {Gao, Y., D. L. Dettman, K. R. Piner, and F. R. Wallace},
+  year = {2010}
+}
