--- a/report/04a_model_summary.qmd
+++ b/report/04a_model_summary.qmd
@@ -27,7 +27,7 @@ ADW - NEED TO ADD FIGURES FOR THESE DATA BRIDGING STEPS, ALSO, IS THERE ANYTHING
 - Recruitment
     - The bias adjustment ramp was updated to end with the last year of removals (2024) and begin to ramp to zero two years prior (2022)
 - Software and Workflow
-    - Update SS3 3.30.23.1 - As seen in Figures @compare2_spawnbio_uncertainty and @compare3_Bratio, this update had no discernable impact on model results. 
+    - Update SS3 3.30.23.2 - As seen in Figures @compare2_spawnbio_uncertainty and @compare3_Bratio, updating to the most recent version of the SS3 executable had no discernable impact on model results. 
     - Use most up-to-date R packages to process input and output files for the assessment, including **nwfscDiag, r4ss, and pacfintools**. 
     - Created a public github repository for Yelloweye Rockfish ("sebastes_ruberrimus_2025") to provide a transparent and reproducible system for processing the data and creating the model and assessment document
 
@@ -38,7 +38,7 @@ KLO: The TOR says this is not required for updates. I am doubtful the SSC will b
 
 ### Modeling Platform and Structure
 
-The assessment was updated to use the most recent version of Stock Synthesis 3 (Version 3.30.23.1 - (NOTE - DOUBLE CHECK VERSION) available [online](https://github.com/nmfs-ost/ss3-source-code/releases/tag/v3.30.23.1)). Bridging between SS versions is discussed in Section @sec-changes. 
+The assessment was updated to use the most recent version of Stock Synthesis 3 (Version 3.30.23.2 - available [online](https://github.com/nmfs-ost/ss3-source-code/releases/tag/v3.30.23.2)). Bridging between SS versions is discussed in Section @sec-changes. 
 
 Briefly, the Yelloweye Rockfish model is a coastwide, single-sex two-area model. California is Area 1, and Oregon and Washington are combined into Area 2, due to differences in potential exploitation rates by area over time. Yelloweye Rockfish compositional data are primarily reported as both sexes combined, and therefore, the previous assessment used a single sex model to facilitate the use of all available data. Growth is assumed to be the same in both areas, though future benchmark assessments may want to re-evaluate this assumption if more spatially-explicit data become available. The modeling period starts in the first year of available catches from historical reconstructions (1889) and the stock is assumed to be at an unfished equilibrium prior to that time. No changes were made to the fleet structure of the model. Fishery removals were divided among seven area- and sector-specific fleets. Estimated discard mortality was added to landings and included in the model as fleet-specific total removals. Length compositions for discarded and retained fish were combined as well. Data weighting was done using the Francis method but the McAllister-Ianelli method was explored as a sensitivity. More detailed information on the model structure and justification is available in @gertseva_stock_2017 and summarized in @tbl-table_config. (ADW - DO WE NEED MORE DETAIL HERE?)
 
@@ -46,6 +46,8 @@ Briefly, the Yelloweye Rockfish model is a coastwide, single-sex two-area model.
 
 
 ### Model Parameters
+
+ADW - still need to write this... 
 
 <!-- Model parameters: estimated and fixed parameters, constraints on parameters, selectivity assumptions, natural mortality, treatment of age reading bias and/or imprecision, and other fixed parameters, description of stock-recruitment constraints or components, critical assumptions, and consequences of assumption failures.  -->
 
