--- a/report/02_introduction.qmd
+++ b/report/02_introduction.qmd
@@ -1,10 +1,10 @@
 # Introduction
 
-Yelloweye Rockfish (**Sebastes ruberrimus**) are found from the Gulf of Alaska to northern Baja California in Mexico across the northeastern Pacific Ocean (@hart_pacific_1973, @love_rockfishes_2002). Their core distribution is from southeast Alaska to central California on the west coast of the United States (@love_rockfishes_2002). Yelloweye Rockfish in Puget Sound are considered isolated from the coastal waters population (@stewart_status_2009) and have been listed as threatened under the Endangered Species Act since 2010 (@drake_status_2010). 
+Yelloweye Rockfish (**Sebastes ruberrimus**) are found from the Gulf of Alaska to northern Baja California in Mexico across the northeastern Pacific Ocean [@hart_pacific_1973, @love_rockfishes_2002]. Their core distribution is from southeast Alaska to central California on the west coast of the United States [@love_rockfishes_2002]. Yelloweye Rockfish in Puget Sound are considered isolated from the coastal waters population [@stewart_status_2009] and have been listed as threatened under the Endangered Species Act since 2010 [@drake_status_2010]. 
 
-Yelloweye Rockfish are strongly associated with rocky bottom habtiat, particularly areas of high relief (@love_rockfishes_2002), and adults are considered to be solitary and sedentary after settlement (@coombs_1979, @demott_1983). However, new tagging studies suggest that adult Yelloweye Rockfish exhibit larger scale movement patterns more commonly than preivously considered (@hannah_movement_2011,@rasmuson_movement_2025). 
+Yelloweye Rockfish are strongly associated with rocky bottom habtiat, particularly areas of high relief [@love_rockfishes_2002], and adults are considered to be solitary and sedentary after settlement [@coombs_1979, @demott_1983]. However, new tagging studies suggest that adult Yelloweye Rockfish exhibit larger scale movement patterns more commonly than preivously considered [@hannah_movement_2011,@rasmuson_movement_2025]. 
 
-There has been little advancement on information pertaining to the stock structure of Yelloweye Rockfish since the previous benchmark assessment. As noted in @gertseva_stock_2017, there is evidence of genetic diferences between Canadian waters (Strait of Georgia) and West coast coastal populations of Yelloweye Rockfish but no evidence across coastal populations (@siegle_genetics_2013). @gao_isotope_2010 found that there was complete mixing of offspring from Oregon and Washington waters using otolith isotope analyses, indicating a single spawning stock in this portion of the Yelloweye Rockfish stock. Given the general perception of the sedentary nature of Yelloweye Rockfish adults and the moderate amount of mixing that occurs during the pelagic larval stage, the previous Yelloweye Rockfish assessment modeled the West coast population as a two-area assessment (California and a combined Oregon-Washington) with a common recruitment relationship (@gertseva_stock_2017). This update assessment maintains this basic structure.  
+There has been little advancement on information pertaining to the stock structure of Yelloweye Rockfish since the previous benchmark assessment. As noted in @gertseva_stock_2017, there is evidence of genetic diferences between Canadian waters (Strait of Georgia) and West coast coastal populations of Yelloweye Rockfish but no evidence across coastal populations [@siegle_genetics_2013]. @gao_isotope_2010 found that there was complete mixing of offspring from Oregon and Washington waters using otolith isotope analyses, indicating a single spawning stock in this portion of the Yelloweye Rockfish stock. Given the general perception of the sedentary nature of Yelloweye Rockfish adults and the moderate amount of mixing that occurs during the pelagic larval stage, the previous Yelloweye Rockfish assessment modeled the West coast population as a two-area assessment (California and a combined Oregon-Washington) with a common recruitment relationship [@gertseva_stock_2017]. This update assessment maintains this basic structure.  
 
 <!-- Scientific name, distribution, the basis for the choice of stock structure, including regional differences in life history or other biological characteristics that should form the basis of management units.  -->
 
@@ -12,19 +12,19 @@ Map of scope of assessment - not needed for update
 
 ## Life History
 
-This section is not required for an update assessment; please refer to the most recent full assessment (@gertseva_stock_2017) for additional information.
+This section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] for additional information.
 
 ## Ecosystem considerations
 
-This section is not required for an update assessment; please refer to the most recent full assessment (@gertseva_stock_2017) for additional information.
+This section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] for additional information.
 
 ## Fishery description
 
- This section is not required for an update assessment; please refer to the most recent full assessment (@gertseva_stock_2017) for additional information.
+ This section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] for additional information.
 
 ## Management History
 
-This section is not required for an update assessment; please refer to the most recent full assessment (@gertseva_stock_2017) for additional information.
+This section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] for additional information.
 
 ## Management performance
 
